feat: add manufacturers CRUD
